Fix async code used in ProtocolAdapterWrapper and (partly) OpcUaProtocolAdapterWrapper